Bug 438840. Page-up/page-down in editable content should scroll the innermost scrollable region containing the caret, not the root. r=roc